--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,6 @@ android {
         ndk {
             abiFilters "armeabi-v7a"
         }
-
-
     }
     buildTypes {
         release {
@@ -27,7 +25,6 @@ android {
             }
         }
     }
-
 }
 
 repositories {
@@ -43,7 +40,6 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.alibaba:fastjson:1.2.47'
     implementation 'com.loopj.android:android-async-http:1.4.9'
-    implementation(name: 'VCSAndroidSDKV1.0.11', ext: 'aar')
-    api 'com.google.protobuf:protobuf-java:3.9.2'
+    implementation(name: 'VCS-Android-SDK-V1.1.0-20191018', ext: 'aar')
 
 }
