--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,9 @@ android {
     defaultConfig {
         applicationId "com.freewind.meetingdemo"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 26
         versionCode 1
-        versionName "1.0.1"
+        versionName "1.1.27"
 
         ndk {
             abiFilters "armeabi-v7a"
@@ -40,5 +40,5 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.alibaba:fastjson:1.2.48'
     implementation 'com.loopj.android:android-async-http:1.4.9'
-    implementation(name: 'VCS-Android-SDK-V1.1.11-20191121', ext: 'aar')
+    implementation(name: 'VCS-Android-SDK-V1.1.27', ext: 'aar')
 }
