--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <meta-data
-            android:name="android.max_aspect"
-            android:value="2.2" />
+        <activity android:name=".activity.SetActivity"></activity>
 
         <activity
-            android:theme="@style/PopDialog2"
-            android:name=".activity.RegisterActivity"/>
+            android:name=".activity.RegisterActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/TransAct" />
+
         <activity android:name=".activity.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,14 +26,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.MainActivity" />
         <activity
             android:name=".activity.MeetingActivity"
+            android:configChanges="orientation|screenSize"
             android:screenOrientation="landscape"
-            android:configChanges="orientation|screenSize" />
-
+            tools:ignore="LockedOrientationActivity" />
+        <meta-data
+            android:name="android.max_aspect"
+            android:value="2.2" />
     </application>
 
 </manifest>
