--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
-        versionName "1.1.41"
+        versionName "1.1.42"
 
         ndk {
             abiFilters "armeabi-v7a"
@@ -25,6 +25,11 @@ android {
             }
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 repositories {
@@ -40,6 +45,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.alibaba:fastjson:1.2.48'
     implementation 'com.loopj.android:android-async-http:1.4.9'
-    implementation(name: 'VCS-Android-V1.1.41', ext: 'aar')
+    implementation(name: 'VCS-Android-V1.1.42', ext: 'aar')
+//    implementation 'com.shiyuan.core:vcs:1.1.42'
+
+    implementation 'com.jakewharton:butterknife:10.2.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
 }
