--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.alibaba:fastjson:1.2.48'
     implementation 'com.loopj.android:android-async-http:1.4.9'
-    implementation(name: 'VCS-Android-V1.1.1-ext', ext: 'aar')
+//    implementation(name: 'VCS-Android-V1.1.1-ext', ext: 'aar')
 //    implementation(name: 'VCS-Android-V1.1.44', ext: 'aar')
-//    implementation 'com.shiyuan.core:vcs:1.1.43'
+    implementation 'com.shiyuan.core:vcs:1.1.44'
 
     implementation 'com.jakewharton:butterknife:10.2.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
