--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
@@ -6,8 +8,8 @@ android {
         applicationId "com.freewind.meetingdemo"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.1.43"
+        versionCode 101
+        versionName "1.1.55"
 
         ndk {
             abiFilters "armeabi-v7a"
@@ -30,6 +32,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 
 repositories {
@@ -40,16 +48,21 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.alibaba:fastjson:1.2.48'
     implementation 'com.loopj.android:android-async-http:1.4.9'
-//    implementation(name: 'VCS-Android-V1.1.1-ext', ext: 'aar')
-//    implementation(name: 'VCS-Android-V1.1.44', ext: 'aar')
-    implementation 'com.shiyuan.core:vcs:1.1.44'
+
+    implementation 'com.shiyuan.core:vcs:1.1.56'
 
     implementation 'com.jakewharton:butterknife:10.2.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
+//    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
+
+    api 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7"
+
 }
