--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,27 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.freewind.meetingdemo">
 
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    <uses-permission
-        android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
-        tools:ignore="ProtectedPermissions" />
-
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:usesCleartextTraffic="true"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
 
-        <activity android:name=".activity.SetActivity"/>
-
+        <activity android:name=".activity.DialogActivity"
+            android:launchMode="singleTask"
+            android:theme="@style/MyCustomDialog"/>
+        <activity android:name=".activity.CallTestActivity" />
+        <activity android:name=".activity.SetActivity" />
         <activity
             android:name=".activity.RegisterActivity"
             android:theme="@style/TransAct" />
-
         <activity android:name=".activity.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,12 +37,18 @@
             android:configChanges="orientation|screenSize"
             android:launchMode="singleTask"
             tools:ignore="LockedOrientationActivity" />
+
         <meta-data
             android:name="android.max_aspect"
             android:value="2.2" />
 
-        <service android:name=".util.FloatingButtonService"/>
-
+        <service android:name=".util.FloatingButtonService" />
     </application>
+    <uses-permission
+        android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
+        tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
 </manifest>
