--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,21 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
+
     defaultConfig {
         applicationId "com.freewind.meetingdemo"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 30
         versionCode 101
         versionName "1.1.55"
 
         ndk {
-            abiFilters "armeabi-v7a"
+            abiFilters "armeabi-v7a", "arm64-v8a"
         }
+
+        multiDexEnabled true
+
     }
     buildTypes {
         release {
@@ -54,15 +56,17 @@ dependencies {
     implementation 'com.alibaba:fastjson:1.2.48'
     implementation 'com.loopj.android:android-async-http:1.4.9'
 
-    implementation 'com.shiyuan.core:vcs:1.1.56'
+    implementation 'com.shiyuan.core:vcs:1.2.0'//通用版本
+
+    implementation ('com.shiyuan.core:vcs-whiteboard:1.0.22-7'){
+        exclude group: 'com.google.protobuf', module: 'protobuf-java'
+    }
 
     implementation 'com.jakewharton:butterknife:10.2.1'
+    implementation 'com.google.android.material:material:1.2.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
 
     api 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7"
-
 }
