--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
-        <activity android:name=".activity.DialogActivity"
+        <activity
+            android:name=".activity.DialogActivity"
             android:launchMode="singleTask"
-            android:theme="@style/MyCustomDialog"/>
+            android:theme="@style/MyCustomDialog" />
         <activity android:name=".activity.CallTestActivity" />
         <activity android:name=".activity.SetActivity" />
         <activity
@@ -42,7 +42,11 @@
             android:name="android.max_aspect"
             android:value="2.2" />
 
-        <service android:name=".util.FloatingButtonService" />
+        <service
+            android:name=".util.FloatingButtonService"
+            android:enabled="true"
+            android:exported="true"
+            tools:targetApi="q" />
     </application>
     <uses-permission
         android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
