--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.31'
-
     repositories {
         google()
         jcenter()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:4.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -23,7 +20,7 @@ allprojects {
         jcenter()
         mavenCentral()
         maven {
-            url 'https://repo.open.seastart.cn/repository/maven-vcs/'
+            url 'https://maven.open.seastart.cn/repository/maven-vcs/'
         }
     }
 }
