--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <application
         android:name=".MyApplication"
+        android:allowAudioPlaybackCapture="true"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,7 +13,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:largeHeap="true"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".activity.ScreenActivity"
+            android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
+            android:exported="true"
+            android:launchMode="singleTask"/>
         <activity
             android:name=".activity.DialogActivity"
             android:launchMode="singleTask"
@@ -22,7 +29,9 @@
         <activity
             android:name=".activity.RegisterActivity"
             android:theme="@style/TransAct" />
-        <activity android:name=".activity.WelcomeActivity">
+        <activity
+            android:exported="true"
+            android:name=".activity.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
@@ -37,16 +46,31 @@
             android:configChanges="orientation|screenSize"
             android:launchMode="singleTask"
             tools:ignore="LockedOrientationActivity" />
-
+        <activity
+            android:name=".activity.Meeting2Activity"
+            android:configChanges="orientation|screenSize"
+            android:launchMode="singleTask"
+            tools:ignore="LockedOrientationActivity" />
         <meta-data
             android:name="android.max_aspect"
             android:value="2.2" />
 
         <service
-            android:name=".util.FloatingButtonService"
+            android:name=".util.ForeService"
             android:enabled="true"
             android:exported="true"
-            tools:targetApi="q" />
+            android:foregroundServiceType="microphone" />
+
+        <service
+            android:name=".util.ScreenService"
+            android:enabled="true"
+            android:exported="true"
+            android:foregroundServiceType="microphone" />
+
+        <service
+            android:name=".util.FloatingButtonService"
+            android:enabled="true"
+            android:exported="true" />
     </application>
     <uses-permission
         android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
