--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,8 @@ android {
         }
 
         multiDexEnabled true
-
+        buildConfigField "String", "VCS_APP_ID", "\"${VCS_APP_ID}\""
+        buildConfigField "String", "VCS_APP_KEY", "\"${VCS_APP_KEY}\""
     }
     buildTypes {
         release {
@@ -58,9 +59,7 @@ dependencies {
     implementation 'com.alibaba:fastjson:1.2.48'
     implementation 'com.loopj.android:android-async-http:1.4.9'
 
-    api 'com.shiyuan.core:vcs:1.2.9-seminar-test35'
-
-//    implementation 'com.shiyuan.core:vcs:1.2.9-sreen0-3'
+    implementation 'com.shiyuan.core:vcs:1.2.10-webinar-1'
 
     implementation ('com.shiyuan.core:vcs-whiteboard:1.0.22-9'){
         exclude group: 'com.google.protobuf', module: 'protobuf-java'
